--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
             <artifactId>modelmapper</artifactId>
             <version>2.3.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
     </dependencies>
 
     <properties>
