--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
             <version>2.4.0</version>
         </dependency>
 
+        <!-- legacy html allow -->
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+            <version>1.9.21</version>
+        </dependency>
+
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
